# plandb_mvp

./: .gitignore  ARCHITECTURE_SKETCH.md  COMPLETE_INTEGRATION_SUMMARY.md  LICENSE.md  PADDLE_SETUP_INSTRUCTIONS.md  README.md  landing_page.html  package-lock.json  package.json  plandb-landing-beta-final.html  run-dev.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: index.html
landingpage/: .gitignore  README.md  index.html
license-api/: README.md  package-lock.json  package.json  vercel.json
license-api/api/: create-checkout.js  verify.js
src/: App.vue  main.ts  style.css  vue3-virtual-scroller.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: window-controls.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  license.rs  license_manager.rs  main.rs  models.rs
src-tauri/src/api-server/: package-lock.json  package.json  vercel.json
src-tauri/src/api-server/api/: paddle-webhook.js
src-tauri/src/license-server/: license-server-mock.cjs  package-lock.json  package.json  vercel.json
src/assets/: global.css  logo.html  theme.css  titlebar.css
src/components/: ChameleonLoader.vue  ConnectionModal.vue  DataComparison.vue  Database.vue  DatabaseConnection.vue  DatabaseExplorer.vue  LicenseModal.vue  MigrationModal.vue  SchemaComparison.vue  Subscription.vue  TableViewer.vue  Virtualtable .vue
src/services/: databaseService.ts  licenseService.ts
